tests/specs/ecosystem/neon/serverless/0_9_0.test
neon/serverless/0.9.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "npm:@types/pg@8.6.6": "npm:@types/pg@8.6.6"
    },
    "npm": {
      "@types/node@18.16.19": {
        "integrity": "sha512-IXl7o+R9iti9eBW4Wg2hx1xQDig183jj7YLn8F7udNceyfkbn1ZxmzZXuak20gR40D7pIkIY1kYGx5VIGbaHKA==",
        "dependencies": {}
      },
      "@types/pg@8.6.6": {
        "integrity": "sha512-O2xNmXebtwVekJDD+02udOncjVcMZQuTEQEMpKJ0ZRf5E7/9JJX3izhKUcUifBkyKpljyUM6BTgy2trmviKlpw==",
        "dependencies": {
          "@types/node": "@types/node@18.16.19",
          "pg-protocol": "pg-protocol@1.6.1",
          "pg-types": "pg-types@2.2.0"
        }
      },
      "pg-int8@1.0.1": {
        "integrity": "sha512-WCtabS6t3c8SkpDBUlb1kjOs7l66xsGdKpIPZsg4wR+B3+u9UAum2odSsF9tnvxg80h4ZxLWMy4pRjOsFIqQpw==",
        "dependencies": {}
      },
      "pg-protocol@1.6.1": {
        "integrity": "sha512-jPIlvgoD63hrEuihvIg+tJhoGjUsLPn6poJY9N5CnlPd91c2T18T/9zBtLxZSb1EhYxBRoZJtzScCaWlYLtktg==",
        "dependencies": {}
      },
      "pg-types@2.2.0": {
        "integrity": "sha512-qTAAlrEsl8s4OiEQY69wDvcMIdQN6wdz5ojQiOy6YRMuynxenON0O5oCpJI6lshc6scgAY8qvJ2On/p+CXY0GA==",
        "dependencies": {
          "pg-int8": "pg-int8@1.0.1",
          "postgres-array": "postgres-array@2.0.0",
          "postgres-bytea": "postgres-bytea@1.0.0",
          "postgres-date": "postgres-date@1.0.7",
          "postgres-interval": "postgres-interval@1.2.0"
        }
      },
      "postgres-array@2.0.0": {
        "integrity": "sha512-VpZrUqU5A69eQyW2c5CA1jtLecCsN2U/bD6VilrFDWq5+5UIEVO7nazS3TEcHf1zuPYO/sqGvUvW62g86RXZuA==",
        "dependencies": {}
      },
      "postgres-bytea@1.0.0": {
        "integrity": "sha512-xy3pmLuQqRBZBXDULy7KbaitYqLcmxigw14Q5sj8QBVLqEwXfeybIKVWiqAXTlcvdvb0+xkOtDbfQMOf4lST1w==",
        "dependencies": {}
      },
      "postgres-date@1.0.7": {
        "integrity": "sha512-suDmjLVQg78nMK2UZ454hAG+OAW+HQPZ6n++TNDUX+L0+uUlLywnoxJKDou51Zm+zTCjrCl0Nq6J9C5hP9vK/Q==",
        "dependencies": {}
      },
      "postgres-interval@1.2.0": {
        "integrity": "sha512-9ZhXKM/rw350N1ovuWHbGxnGh/SNJ4cnxHiM0rxE4VN41wsg8P8zWn9hv/buK00RP4WvlOyr/RBDiptyxVbkZQ==",
        "dependencies": {
          "xtend": "xtend@4.0.2"
        }
      },
      "xtend@4.0.2": {
        "integrity": "sha512-LKYU1iAXJXUgAXn9URjiu+MWhyUXHsvfp7mcuYm9dSUKK0/CjtrUwFAxD82/mCWbtLsGjFIad0wIsod4zrTAEQ==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2307 [ERROR]: Cannot find module 'file://<tmpdir>/pg-protocol'.
    at file://<tmpdir>/index.d.ts:1:31

error: Type checking failed.

